			- Added border to fonts thanks to Robert Cheramy.
            - Added HD support
            - Fixed ffmpeg support
            - Improved handling of Image not found
            - Fixed export video extension
            - Imagination projects should now have .img as an extention
            - Changed behaviour of "new" and "open" (now work as expected)
14/10/09 - 2.1:
			- Added a new transition family named Rochade.
			- Added 3GP export for mobile phones.
			- Fixed seg-fault when using Imagination with GTK 2.18
			- Fixed crash when playing with Ken Burns and slide text after closing the project.
			- Added a slides transitions report dialog.
			- Added Japanese translation.
			- Fixed display of music duration after loading the slideshow.
			- Fixed seg-fault when exporting with more audio files.
			- Image rotation is now stored inside project file.

27/09/09 - 2.0:
			- Fixed loading of text position icons.
			- Made the audio files to be concatenated and have fade-out effect at the end.
			- Fixed save warning dialog to appear when it shouldn't.
			- Fixed rescale images regression.
			- FLV export supports several video sizes.

22/08/09 - 2.0b1:
			- Fixed bug that caused exported slideshows being 20% longer than reported by Imagination.
			- Added ability to insert an empty slide with the option to choose a background color gradient in three different ways: solid, linear and radial.
			- Added Widescreen option to FLV exported video.
			- Added Cut/Copy/Paste ability on the slides.
			- Added Dissolve transition effect.
			- Added an overview mode to the GUI which displays slides in a matrix.
			- Added icons on the slides for indicating the transition type and if text is set on the slide.
			- Added ability to add text on the slides with some text animations.
			- Added HTML documentation.
			- Added Ken Burns effects.
			- Made GUI work better on smaller screens.
			- Added russian translation.	